--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Curso Online de Font End - Do Front ao End</title>
+    
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet"> 
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para ver esse site.</noscript>
