--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Curso Online de Font End - Do Front ao End</title>
-    
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet"> 
+    <title>Curso Online de Front End - Do Front ao End</title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para ver esse site.</noscript>
